<resources>
    <string name="app_name">localFeeds</string>
    <string name="title">Titre</string>
    <string name="description">Une description</string>
    <string name="distance">12,6 km</string>
    <string name="productor_name">Le nom du Producteur</string>
    <string name="favorite_icon_description">icône de favori</string>
    <string name="announcement_title">Titre Annonce</string>
    <string name="informations_producteur">Informations producteur</string>
    <string name="is_vegetarien">vegetarien</string>
    <string name="nom_application">LocalFeeds</string>
    <string name="first_start_app">Premiers pas</string>
    <string name="start_app">C\'est parti !</string>
    <string name="bouton_confirmer_preferences">Confirmer</string>
    <string name="text_switch_vege">Vous êtes végétarien</string>
    <string name="text_switch_gluten"></string>
    <string name="text_produits_laitiers">Vous aimez le lait et le fromage</string>
    <string name="text_question_preferences_alimentaires">Parlez-nous un peu de vous</string>
    <string name="text_titre_slide">LocalFeeds</string>
    <string name="text_desc_slide">L\'application pour consommer local.</string>
    <string name="anouncement_list">Liste d\'annonces</string>
    <string name="name_application">Localfeeds</string>
    <string name="text_welcome">Bienvenue sur l\'application</string>
    <string name="vous_etes">Vous êtes …</string>
    <string name="icon_right_arrow">icon qui mène à la fiche producteur</string>
</resources>